Version 1.9.9, in progress
- Fix encoding for Polish translation
- Fix bug: in logging commands entered via the gretl console, options
  were being omitted
- Fix behavior of Ctrl-A in non-editable text windows

2012-03-29 version 1.9.8
- GUI: support use of named lists in the model specification dialog and
  other contexts
- GUI: add option of making the script editor and the model viewer
  windows use tabs
- GUI: add "reformat" option to summary statistics window for single
  series
- GUI: add keyboard shortcut help file
- Add a new practice script illustrating advanced use of mle command,
  and extend the discussion of mle in the User's Guide
- New function pxsum(): computes the cross-sectional sum of a series in
  the context of panel data
- stack() function for panel data: allow '*' in forming list of series
- Compaction of daily to weekly data: enable this even if the daily data
  are not dated
- "panel" command: add --nerlove option to use Nerlove's transformation
  in the context of the random effects estimator
- "system" command: various small fixes and enhancements, including 
  greater computational efficiency
- "pca" command: add --quiet option and parameter to allow specification
  of the number of components to save
- "coint" command: add --verbose option and fix printout of model at
  last step of Engle-Granger test
- "graphpg" command: add "fonstscale" parameter (but also try harder to
  get the default font size right for various gnuplot versions)
- princomp() function: add an optional switch to use the covariance
  matrix
- matrix manipulation: enable use of the boolean operators "&&" and 
  "||" as element-wise operations on matrices 
- Function packages: prevent a package's "bundle-plot" function from
  appearing in the initial GUI listing of public functions
- Fix bug: avoid introducing "decimal commas" in setting size of PDF 
  plots in gnuplot
- Fix bug: deletion of matrices within a loop: ensure that the GUI icon 